{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 124,
  "lineage": "8f27244b-c60b-c821-e51a-c411357ccd5e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fsx_lustre",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019167255542:security-group/sg-048badbf3f98696c7",
            "description": "FSx Lustre filesystem ENIs - Variant H multi-model weights",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Lustre 988 return traffic to EKS worker nodes",
                "from_port": 988,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0563c32d33eca0854"
                ],
                "self": false,
                "to_port": 988
              },
              {
                "cidr_blocks": [],
                "description": "Lustre ephemeral 1018-1023 return traffic to EKS worker nodes",
                "from_port": 1018,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0563c32d33eca0854"
                ],
                "self": false,
                "to_port": 1023
              }
            ],
            "id": "sg-048badbf3f98696c7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Lustre 1018-1023 self-referential (FSx pre-flight check)",
                "from_port": 1018,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 1023
              },
              {
                "cidr_blocks": [],
                "description": "Lustre 988 from EKS worker nodes",
                "from_port": 988,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0563c32d33eca0854"
                ],
                "self": false,
                "to_port": 988
              },
              {
                "cidr_blocks": [],
                "description": "Lustre 988 self-referential (FSx pre-flight check)",
                "from_port": 988,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 988
              },
              {
                "cidr_blocks": [],
                "description": "Lustre ephemeral 1018-1023 from EKS worker nodes",
                "from_port": 1018,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0563c32d33eca0854"
                ],
                "self": false,
                "to_port": 1023
              }
            ],
            "name": "inference-phase4-1-fsx-lustre-20260503185626048600000001",
            "name_prefix": "inference-phase4-1-fsx-lustre-",
            "owner_id": "019167255542",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "inference-phase4-1-fsx-lustre",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "Variant": "fsx-lustre",
              "experiment": "phase4.1-variantH"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-fsx-lustre",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "Variant": "fsx-lustre",
              "experiment": "phase4.1-variantH"
            },
            "timeouts": null,
            "vpc_id": "vpc-057bdf5d61136b1ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019167255542:security-group/sg-038712452c5c2bef3",
            "description": "Allow SSH access to EKS nodes from operator IP",
            "egress": [],
            "id": "sg-038712452c5c2bef3",
            "ingress": [
              {
                "cidr_blocks": [
                  "24.87.135.164/32"
                ],
                "description": "SSH from operator IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "inference-phase4-1-node-ssh-2026043015071339870000000b",
            "name_prefix": "inference-phase4-1-node-ssh-",
            "owner_id": "019167255542",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "inference-phase4-1-node-ssh"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-node-ssh",
              "Project": "inference-lab",
              "Stage": "phase4.1"
            },
            "timeouts": null,
            "vpc_id": "vpc-057bdf5d61136b1ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "karpenter",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "karpenter",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/managed-by": "terraform"
                },
                "name": "karpenter",
                "resource_version": "1920",
                "uid": "5fcb75c9-1b7c-4164-9ae9-d6f1f132cb1a"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "aws_iam_role.karpenter_node",
            "aws_security_group.node_ssh",
            "module.ebs_csi_irsa.aws_iam_role.this",
            "module.ebs_csi_irsa.data.aws_caller_identity.current",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.this",
            "module.ebs_csi_irsa.data.aws_partition.current",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.eks.aws_eks_access_entry.this",
            "module.eks.aws_eks_access_policy_association.this",
            "module.eks.aws_eks_addon.before_compute",
            "module.eks.aws_eks_addon.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_identity_provider_config.this",
            "module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.aws_iam_policy.cluster_encryption",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_policy.custom",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.additional",
            "module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks.aws_iam_role_policy_attachment.custom",
            "module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_eks_addon_version.this",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.custom",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.data.tls_certificate.this",
            "module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks.module.fargate_profile.aws_iam_role.this",
            "module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.eks.module.fargate_profile.data.aws_partition.current",
            "module.eks.module.fargate_profile.data.aws_region.current",
            "module.eks.module.kms.aws_kms_alias.this",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_grant.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.eks.time_sleep.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019167255542:security-group/sg-00edb860eabfcc0d3",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-00edb860eabfcc0d3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0563c32d33eca0854"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "inference-phase4-1-cluster-2026043015071404680000000d",
            "name_prefix": "inference-phase4-1-cluster-",
            "owner_id": "019167255542",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "inference-phase4-1-cluster",
              "karpenter.sh/discovery": "inference-phase4-1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-cluster",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "karpenter.sh/discovery": "inference-phase4-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-057bdf5d61136b1ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019167255542:security-group/sg-0563c32d33eca0854",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic from nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0563c32d33eca0854",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00edb860eabfcc0d3"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00edb860eabfcc0d3"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00edb860eabfcc0d3"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00edb860eabfcc0d3"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00edb860eabfcc0d3"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00edb860eabfcc0d3"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Lustre 1018-1023 from FSx ENIs",
                "from_port": 1018,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-048badbf3f98696c7"
                ],
                "self": false,
                "to_port": 1023
              },
              {
                "cidr_blocks": [],
                "description": "Lustre 988 from FSx ENIs",
                "from_port": 988,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-048badbf3f98696c7"
                ],
                "self": false,
                "to_port": 988
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "inference-phase4-1-node-2026043015071340120000000c",
            "name_prefix": "inference-phase4-1-node-",
            "owner_id": "019167255542",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "inference-phase4-1-node",
              "karpenter.sh/discovery": "inference-phase4-1",
              "kubernetes.io/cluster/inference-phase4-1": "owned"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-node",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "karpenter.sh/discovery": "inference-phase4-1",
              "kubernetes.io/cluster/inference-phase4-1": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-057bdf5d61136b1ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2660172939",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00edb860eabfcc0d3",
            "security_group_rule_id": "sgr-0af2c52ea9b8b18e1",
            "self": false,
            "source_security_group_id": "sg-0563c32d33eca0854",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic from nodes",
            "from_port": 0,
            "id": "sgrule-3833247899",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0563c32d33eca0854",
            "security_group_rule_id": "sgr-0506d46e148157b58",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-317709369",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0563c32d33eca0854",
            "security_group_rule_id": "sgr-023c0e19195e46566",
            "self": false,
            "source_security_group_id": "sg-00edb860eabfcc0d3",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-4200874632",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0563c32d33eca0854",
            "security_group_rule_id": "sgr-021e944250f56cb4d",
            "self": false,
            "source_security_group_id": "sg-00edb860eabfcc0d3",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-858137886",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0563c32d33eca0854",
            "security_group_rule_id": "sgr-00f7531371ed86a56",
            "self": false,
            "source_security_group_id": "sg-00edb860eabfcc0d3",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-544872767",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0563c32d33eca0854",
            "security_group_rule_id": "sgr-08b4f7764008f61d3",
            "self": false,
            "source_security_group_id": "sg-00edb860eabfcc0d3",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1155214068",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0563c32d33eca0854",
            "security_group_rule_id": "sgr-0b8b11dd2c5394049",
            "self": false,
            "source_security_group_id": "sg-00edb860eabfcc0d3",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2875939895",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0563c32d33eca0854",
            "security_group_rule_id": "sgr-0bca58dfe54c5d34d",
            "self": false,
            "source_security_group_id": "sg-00edb860eabfcc0d3",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3535141918",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0563c32d33eca0854",
            "security_group_rule_id": "sgr-001e539509b2eed46",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1503625672",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0563c32d33eca0854",
            "security_group_rule_id": "sgr-02a84985cc8fc215a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-4257227303",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0563c32d33eca0854",
            "security_group_rule_id": "sgr-02e581e52010a33c6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019167255542:network-acl/acl-0b1fcec0838674a76",
            "default_network_acl_id": "acl-0b1fcec0838674a76",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b1fcec0838674a76",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "019167255542",
            "subnet_ids": [
              "subnet-008821d281adeffc6",
              "subnet-015415ea65e375e5d",
              "subnet-0526b01a3d3c49d19",
              "subnet-08fc67e799fd679b9",
              "subnet-0b597d988438e7737"
            ],
            "tags": {
              "Name": "inference-phase4-1-vpc-default",
              "karpenter.sh/discovery": "inference-phase4-1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-vpc-default",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "karpenter.sh/discovery": "inference-phase4-1"
            },
            "vpc_id": "vpc-057bdf5d61136b1ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019167255542:route-table/rtb-0a8ae1faba5c98745",
            "default_route_table_id": "rtb-0a8ae1faba5c98745",
            "id": "rtb-0a8ae1faba5c98745",
            "owner_id": "019167255542",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "inference-phase4-1-vpc-default",
              "karpenter.sh/discovery": "inference-phase4-1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-vpc-default",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "karpenter.sh/discovery": "inference-phase4-1"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-057bdf5d61136b1ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019167255542:security-group/sg-0523c9439a5e72848",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0523c9439a5e72848",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "019167255542",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "inference-phase4-1-vpc-default",
              "karpenter.sh/discovery": "inference-phase4-1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-vpc-default",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "karpenter.sh/discovery": "inference-phase4-1"
            },
            "vpc_id": "vpc-057bdf5d61136b1ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ea2f618e17921a2",
            "arn": "arn:aws:ec2:us-east-1:019167255542:elastic-ip/eipalloc-07ea2f618e17921a2",
            "domain": "vpc",
            "id": "eipalloc-07ea2f618e17921a2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-195-123-197.compute-1.amazonaws.com",
            "public_ip": "34.195.123.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "inference-phase4-1-vpc-us-east-1a",
              "karpenter.sh/discovery": "inference-phase4-1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-vpc-us-east-1a",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "karpenter.sh/discovery": "inference-phase4-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019167255542:internet-gateway/igw-0f84c8c781f1969b3",
            "id": "igw-0f84c8c781f1969b3",
            "owner_id": "019167255542",
            "tags": {
              "Name": "inference-phase4-1-vpc",
              "karpenter.sh/discovery": "inference-phase4-1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-vpc",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "karpenter.sh/discovery": "inference-phase4-1"
            },
            "vpc_id": "vpc-057bdf5d61136b1ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ea2f618e17921a2",
            "association_id": "eipassoc-07380d6a5e1df4f22",
            "connectivity_type": "public",
            "id": "nat-0c1c5797aee8111dd",
            "network_interface_id": "eni-07fa3f8606812596e",
            "private_ip": "10.5.138.140",
            "public_ip": "34.195.123.197",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b597d988438e7737",
            "tags": {
              "Name": "inference-phase4-1-vpc-us-east-1a",
              "karpenter.sh/discovery": "inference-phase4-1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-vpc-us-east-1a",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "karpenter.sh/discovery": "inference-phase4-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d9bbae488d0a201c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c1c5797aee8111dd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d9bbae488d0a201c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f84c8c781f1969b3",
            "id": "r-rtb-0fc148bbfb7a4007c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fc148bbfb7a4007c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019167255542:route-table/rtb-0d9bbae488d0a201c",
            "id": "rtb-0d9bbae488d0a201c",
            "owner_id": "019167255542",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "inference-phase4-1-vpc-private",
              "karpenter.sh/discovery": "inference-phase4-1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-vpc-private",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "karpenter.sh/discovery": "inference-phase4-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-057bdf5d61136b1ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019167255542:route-table/rtb-0fc148bbfb7a4007c",
            "id": "rtb-0fc148bbfb7a4007c",
            "owner_id": "019167255542",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "inference-phase4-1-vpc-public",
              "karpenter.sh/discovery": "inference-phase4-1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-vpc-public",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "karpenter.sh/discovery": "inference-phase4-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-057bdf5d61136b1ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f62c822a0959626d",
            "route_table_id": "rtb-0d9bbae488d0a201c",
            "subnet_id": "subnet-01f5d767ae82f508b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053bfbac3b88d6bc3",
            "route_table_id": "rtb-0d9bbae488d0a201c",
            "subnet_id": "subnet-008821d281adeffc6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b479af831324e9f3",
            "route_table_id": "rtb-0d9bbae488d0a201c",
            "subnet_id": "subnet-0526b01a3d3c49d19"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bf7284d245e0a9d",
            "route_table_id": "rtb-0d9bbae488d0a201c",
            "subnet_id": "subnet-0f921458b2acae95b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dde0d8cb064150a",
            "route_table_id": "rtb-0fc148bbfb7a4007c",
            "subnet_id": "subnet-0b597d988438e7737"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c10ae8ed22fb16f7",
            "route_table_id": "rtb-0fc148bbfb7a4007c",
            "subnet_id": "subnet-015415ea65e375e5d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccba5616e880ea96",
            "route_table_id": "rtb-0fc148bbfb7a4007c",
            "subnet_id": "subnet-093d4e6630a36bb77"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00dbffef3c9061344",
            "route_table_id": "rtb-0fc148bbfb7a4007c",
            "subnet_id": "subnet-08fc67e799fd679b9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019167255542:subnet/subnet-01f5d767ae82f508b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.5.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f5d767ae82f508b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019167255542",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inference-phase4-1-vpc-private-us-east-1a",
              "karpenter.sh/discovery": "inference-phase4-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-vpc-private-us-east-1a",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "karpenter.sh/discovery": "inference-phase4-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-057bdf5d61136b1ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019167255542:subnet/subnet-008821d281adeffc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.5.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008821d281adeffc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019167255542",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inference-phase4-1-vpc-private-us-east-1b",
              "karpenter.sh/discovery": "inference-phase4-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-vpc-private-us-east-1b",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "karpenter.sh/discovery": "inference-phase4-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-057bdf5d61136b1ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019167255542:subnet/subnet-0526b01a3d3c49d19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.5.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0526b01a3d3c49d19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019167255542",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inference-phase4-1-vpc-private-us-east-1c",
              "karpenter.sh/discovery": "inference-phase4-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-vpc-private-us-east-1c",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "karpenter.sh/discovery": "inference-phase4-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-057bdf5d61136b1ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019167255542:subnet/subnet-0f921458b2acae95b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.5.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f921458b2acae95b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019167255542",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inference-phase4-1-vpc-private-us-east-1d",
              "karpenter.sh/discovery": "inference-phase4-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-vpc-private-us-east-1d",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "karpenter.sh/discovery": "inference-phase4-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-057bdf5d61136b1ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019167255542:subnet/subnet-0b597d988438e7737",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.5.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b597d988438e7737",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019167255542",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inference-phase4-1-vpc-public-us-east-1a",
              "karpenter.sh/discovery": "inference-phase4-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-vpc-public-us-east-1a",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "karpenter.sh/discovery": "inference-phase4-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-057bdf5d61136b1ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019167255542:subnet/subnet-015415ea65e375e5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.5.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015415ea65e375e5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019167255542",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inference-phase4-1-vpc-public-us-east-1b",
              "karpenter.sh/discovery": "inference-phase4-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-vpc-public-us-east-1b",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "karpenter.sh/discovery": "inference-phase4-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-057bdf5d61136b1ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019167255542:subnet/subnet-093d4e6630a36bb77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.5.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093d4e6630a36bb77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019167255542",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inference-phase4-1-vpc-public-us-east-1c",
              "karpenter.sh/discovery": "inference-phase4-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-vpc-public-us-east-1c",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "karpenter.sh/discovery": "inference-phase4-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-057bdf5d61136b1ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019167255542:subnet/subnet-08fc67e799fd679b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.5.176.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fc67e799fd679b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019167255542",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inference-phase4-1-vpc-public-us-east-1d",
              "karpenter.sh/discovery": "inference-phase4-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-vpc-public-us-east-1d",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "karpenter.sh/discovery": "inference-phase4-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-057bdf5d61136b1ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019167255542:vpc/vpc-057bdf5d61136b1ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-0b1fcec0838674a76",
            "default_route_table_id": "rtb-0a8ae1faba5c98745",
            "default_security_group_id": "sg-0523c9439a5e72848",
            "dhcp_options_id": "dopt-619cf41b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-057bdf5d61136b1ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a8ae1faba5c98745",
            "owner_id": "019167255542",
            "tags": {
              "Name": "inference-phase4-1-vpc",
              "karpenter.sh/discovery": "inference-phase4-1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "inference-phase4-1-vpc",
              "Project": "inference-lab",
              "Stage": "phase4.1",
              "karpenter.sh/discovery": "inference-phase4-1"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}